<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">meDB</string>
    <string name="login_button_text">LOG IN</string>
    <string name="login_description_text">Organize \u2022 
        Discover \u2022 Share</string>
    <!-- Action Bar constants -->
    <string name="home_action_settings">Settings</string>
    <string name="home_action_notifications">Notifications</string>
    <string name="organize_action_add">Add List</string>
    <string name="pane_action_add">Add List></string>
    <string name="list_action_add">Add Item</string>
    <string name="list_action_edit">Edit Item</string>
    <string name="list_action_delete">Delete Item</string>
    <!-- Home Bar constants -->

    <string name="home_bar">Home Bar</string>
    <string name="search_button">Search Button</string>
    <string name="home_button">Home Button</string>
    <string name="organize_button">Organize Button</string>
    <string name="discover_button">Discover Button</string>

    <!-- View Name constants -->
    <string name="home_view">Home View</string>
    <string name="organize_view">Organize View</string>
    <string name="discover_view">Discover View</string>
    <string name="search_view">Search View</string>
    <string name="item_view">Item View</string>
    <string name="pane_view">Pane View</string>
    <string name="list_view">List View</string>
    <string name="settings_view">Settings View</string>
    <string name="notifications_view">Settings View</string>

    <!-- Movies View -->
    <string name="movies_title">Movies</string>
    <string name="movies_recent_movies">Recent Movies</string>
    <string name="movies_your_lists">Your Lists</string>
    <string name="movies_num_items">%1$d ITEMS</string>

    <!-- Friends View -->
    <string name="friends_title">Friends</string>
    <string name="friends_item_info">%1$s and %2$d others recently added this</string>

    <!-- Discover View -->
    <string name="dis_friends_tab_name">Friends</string>
    <string name="dis_popular_tab_name">Popular</string>
    <string name="dis_additional_tab_1">%1$s</string>
    <string name="dis_additional_tab_2">%1$s</string>
    <string name="dis_additional_tab_3">%1$s</string>
    <string name="dis_media_relates_tab_1">Media related to %1$s</string>
    <string name="dis_media_relates_tab_2">Media related to %1$s</string>
    <string name="dis_media_relates_tab_3">Media related to %1$s</string>
    <string name="dis_games_relates_tab_1">Games related to %1$s</string>
    <string name="dis_games_relates_tab_2">Games related to %1$s</string>
    <string name="dis_games_relates_tab_3">Games related to %1$s</string>
    <string name="dis_books_relates_tab_1">Books related to %1$s</string>
    <string name="dis_books_relates_tab_2">Books related to %1$s</string>
    <string name="dis_books_relates_tab_3">Books related to %1$s</string>

    <!-- Home View -->
    <string name="home_title">meDB</string>
    <string name="home_my_recent_act">My recent activity</string>
    <string name="home_friends_recent_act">My recent activity</string>
    <string name="home_rated">%1$s rated</string>
    <string name="home_added">%1$s added to %2$s</string>
    <string name="home_reviewed">%1$s reviewed %2$s</string>
    <string name="nav_block">Navigation Block</string>

    <!-- Item View -->
    <string name="item_name">Name</string>
    <string name="item_add">ADD</string>
    <string name="item_share">SHARE</string>
    <string name="item_rating">Rating: </string>
    <string name="item_pic">Item Thumbnail</string>
    <string name="item_director">Director: </string>
    <string name="item_actor">Actors: </string>
    <string name="item_tags">Tags: </string>
    <string name="item_reviews">Reviews: </string>
    <string name="item_similar">Similar to %1$s</string>
    <string name="item_ok">OK</string>

    <!-- List View -->
    <string name="list_title">%1$s</string>

    <!-- Notification View -->
    <string name="notification_title">Notification</string>

    <!-- Organize View -->
    <string name="organize_title">Organize</string>
    <string name="my_lists"><u>My Lists</u></string>
    <string name="organize_movies">Movies</string>
    <string name="organize_games">Games</string>
    <string name="organize_books">Books</string>
    <string name="organize_music">Music</string>
    <string name="organize_num_items">%1$d ITEMS</string>

    <!-- Search View -->
    <string name="search_info">Search results for %1$s</string>
    <string name="search_add">ADD</string>
    <string name="login_button">Facebook Login</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Type Here</string>

    <!-- Settings View -->
    <string name="log_out_button">Log Out</string>
    <string name="friends_button">Friends</string>
    <string name="about_button">About</string>
    <string name="help_button">Help</string>
    <string name="title_activity_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_help">Help</string>
    <string name="new_releases">New Releases</string>
    <string name="popular">Popular</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="trending_among_friends">Trending Among Friends</string>
    <string name="title_activity_friends">Friends</string>
    <string name="delete_list">Delete List</string>
    <string name="list_add">Add</string>

</resources>
