<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:contentDescription="@string/settings_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

   <fragment
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:name="media.backlog.medb.HomeBar"
        android:id="@+id/home_bar"
        android:layout_alignParentBottom="true"
        tools:layout="@layout/home_bar"></fragment>
   
   <Button
       android:id="@+id/log_out_button"
       android:layout_width="240dp"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="30dp"
       android:text="@string/log_out_button" />

   <Button
       android:id="@+id/friends_button"
       android:layout_width="240dp"
       android:layout_height="wrap_content"
       android:layout_below="@+id/log_out_button"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="10dp"
       android:text="@string/friends_button" />
   
   <Button
       android:id="@+id/about_button"
       android:layout_width="240dp"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/friends_button"
       android:layout_below="@+id/friends_button"
       android:layout_marginTop="10dp"
       android:text="@string/about_button" />

   <Button
       android:id="@+id/help_button"
       android:layout_width="240dp"
       android:layout_height="wrap_content"
       android:layout_alignRight="@+id/about_button"
       android:layout_below="@+id/about_button"
       android:layout_marginTop="10dp"
       android:text="@string/help_button" />

   


</RelativeLayout>