<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_bar"
    android:contentDescription="@string/home_bar"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/home_color"
    style="@android:style/ButtonBar"
    android:gravity="center">

    <ImageButton
        android:contentDescription="@string/home_button"
        android:layout_width="@dimen/home_bar_icon_dim"
        android:layout_height="@dimen/home_bar_icon_dim"
        android:id="@+id/homeButton"
        android:src="@drawable/ic_action_home"
        android:layout_weight="1"
        android:background="@color/home_color"
        android:clickable="true" />

    <ImageButton
        android:contentDescription="@string/organize_button"
        android:layout_width="@dimen/home_bar_icon_dim"
        android:layout_height="@dimen/home_bar_icon_dim"
        android:id="@+id/organizeButton"
        android:src="@drawable/ic_action_select_all"
        android:layout_weight="1"
        android:background="@color/home_color"
        android:clickable="true" />

    <ImageButton
        android:contentDescription="@string/discover_button"
        android:layout_width="@dimen/home_bar_icon_dim"
        android:layout_height="@dimen/home_bar_icon_dim"
        android:id="@+id/discoverButton"
        android:src="@drawable/ic_action_share"
        android:layout_weight="1"
        android:background="@color/home_color"
        android:clickable="true" />

    <ImageButton
        android:contentDescription="@string/search_button"
        android:layout_width="@dimen/home_bar_icon_dim"
        android:layout_height="@dimen/home_bar_icon_dim"
        android:id="@+id/searchButton"
        android:src="@drawable/ic_action_search"
        android:layout_weight="1"
        android:background="@color/home_color"
        android:clickable="true" />
</LinearLayout>
